# mech-microsat

./: .gitignore  pyproject.toml
Lab02_IMU/: README.md  bspline_shadow_editor.py  generate_imu_from_curve.py  ideal_IMU_DCM_script.m
Lab02_IMU/output/: IMU_from_curve.csv  save_123.npz
Lab04_eclipse/: BatterySizing_LituanicaSAT2.m  Isothermal_LituanicaSAT2.m  RadiationDisturbance_LituanicaSAT2.m  icecube.md  tle_converter.py
final_proj/: README.md  library.md  project_plan.md  xdsm.py
final_proj/config/: low_inc.json  optimization_npt30_low_inc.json  recommand_inc.json  sweep_inclination_surface.json  sweep_low_inc.json
final_proj/docs/: AGENT.md  bsk.md  coupled_design_point_solver_slides.md  faceted_srp_panel_angle_formulation.md  optimization_framework.md  project_plan.md  sizing_solver.md
final_proj/docs/changelog/: 2026-04-18_baseline-sim.md  2026-04-21_srp-sweep.md  2026-04-28_propulsion-module.md
final_proj/docs/power_thermal/: power_thermal_module_formulation.md
final_proj/docs/propulsion/: propulsion_engine_candidates.md  propulsion_fixed_thruster_formulation.md  propulsion_module_report.md
final_proj/docs/srp_response_curve_result/: srp_response_curve_report.md
final_proj/docs/xdsm/: sol_sentinel_xdsm.tex  sol_sentinel_xdsm.tikz
final_proj/scripts/: run_baseline.py  run_design_point.py  run_optimization.py  run_sweep.py
final_proj/source/: __init__.py  __main__.py  cli.py  initial_conditions.py  rotating_frame.py  srp_sim.py  srp_sweep.py  srp_validation.py  surrogate.py  surrogate_plot.py
final_proj/source/optimization/: __init__.py  (+11 more)
(+918 files in other folders)
