[project]
name = "mech-microsat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.3.1",
    "rich>=14.1.0",
    "scipy>=1.17.1",
    "typer>=0.16.1",
]
